AC_INIT(configure.in)

dnl
dnl Set the directory that contains support scripts such as install-sh and
dnl config.guess
dnl
AC_CONFIG_AUX_DIR(../../../../../confdb)

dnl
dnl Definitions will be placed in this file rather than in the DEFS variable
dnl
AC_CONFIG_HEADER(include/mpidi_ch3i_ib_conf.h)

echo "RUNNING CONFIGURE FOR THE INFINIBAND CHANNEL"

dnl
dnl First check that we have a clean build if we are doing a VPATH build
if test "`cd $srcdir && pwd`" != "`pwd`" && test -f $srcdir/config.status ; then
    AC_MSG_ERROR([You cannot do a VPATH build if the source directory has been
    configured.  Run "make distclean" in $srcdir first.])
fi

PAC_PROG_MAKE

AC_DEFINE(MPID_IBU_TYPE_UNIX,,[Define to use unix iovecs])

AC_CHECK_HEADERS(				\
    assert.h					\
    errno.h					\
    fcntl.h					\
    netdb.h					\
    netinet/in.h				\
    netinet/tcp.h				\
    stdlib.h					\
    sys/param.h					\
    sys/poll.h					\
    sys/socket.h				\
    sys/types.h					\
    unistd.h)

AC_SEARCH_LIBS(socket,socket)
if test "$ac_cv_search_socket" != "none required" ; then
    IB_LIBS="$IB_LIBS $ac_cv_search_socket" 
fi
AC_SEARCH_LIBS(gethostbyname,nsl)
if test "$ac_cv_search_gethostbyname" != "none required" ; then
    IB_LIBS="$IB_LIBS $ac_cv_search_gethostbyname" 
fi
IB_LIBS="$IB_LIBS -lmtl_common -lvapi -lmpga -lpthread"
AC_SUBST(IB_LIBS)
IB_CPPFLAGS="$IB_CPPFLAGS -I/usr/mellanox/include -I/usr/mellanox/wrap"
AC_SUBST(IB_CPPFLAGS)
IB_LDFLAGS="$IB_LDFLAGS -L/usr/mellanox/lib"
AC_SUBST(IB_LDFLAGS)

AC_SUBST(DEVICE)
AC_SUBST(CHANNEL)

AC_SUBST(AR)
AC_SUBST(RANLIB)
AC_SUBST(MPILIBNAME)
AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CC_SHL)
AC_SUBST(C_LINK_SHL)
AC_SUBST(master_top_srcdir)
dnl
dnl Dependency handling
AC_SUBST(MAKE_DEPEND_C)

AC_OUTPUT(Makefile src/Makefile localdefs)
