AC_INIT(configure.in)

dnl
dnl Set the directory that contains support scripts such as install-sh and
dnl config.guess
dnl
AC_CONFIG_AUX_DIR(../../../../../confdb)

dnl
dnl Definitions will be placed in this file rather than in the DEFS variable
dnl
AC_CONFIG_HEADER(include/mpidi_ch3i_ib_conf.h)

echo "RUNNING CONFIGURE FOR THE INFINIBAND CHANNEL"

save_libs=$LIBS
LIBS=

dnl
dnl First check that we have a clean build if we are doing a VPATH build
if test "`cd $srcdir && pwd`" != "`pwd`" && test -f $srcdir/config.status ; then
    AC_MSG_ERROR([You cannot do a VPATH build if the source directory has been
    configured.  Run "make distclean" in $srcdir first.])
fi

file=${master_top_srcdir}/src/mpid/${device_name}/channels/ib/setup_channel.args
if test -f ${file} ; then
    . ${file}
else
    echo "Error: ${file} not found"
    exit 1
fi
for arg in $ibu_name ; do
  case $arg in 
    ibal)
    AC_DEFINE(USE_IB_IBAL,,[Define to use the SourceForge ibal interface])
    ;;
  esac
  case $arg in
    vapi)
    AC_DEFINE(USE_IB_VAPI,,[Define to use the Mellanox vapi interface])
    ;;
  esac
done

dnl if "x$ibu_name" = "xibal" ; then
dnl AC_DEFINE(USE_IB_IBAL,,[Define to use the SourceForge ibal interface])
dnl fi
dnl if "x$ibu_name" = "xvapi" ; then
dnl AC_DEFINE(USE_IB_VAPI,,[Define to use the Mellanox vapi interface])
dnl fi

PAC_PROG_MAKE

AC_DEFINE(MPID_IBU_TYPE_UNIX,,[Define to use unix iovecs])

AC_CHECK_HEADERS(				\
    assert.h					\
    errno.h					\
    fcntl.h					\
    netdb.h					\
    netinet/in.h				\
    netinet/tcp.h				\
    stdlib.h					\
    sys/param.h					\
    sys/poll.h					\
    sys/socket.h				\
    sys/types.h					\
    unistd.h)

AC_SEARCH_LIBS(socket,socket)
AC_SEARCH_LIBS(gethostbyname,nsl)

dnl IB_LIBS="$IB_LIBS $LIBS -lmtl_common -lvapi -lmpga -lpthread"
IB_LIBS="$IB_LIBS -lallib -lcomplib -lpthread -ldl"
LIBS=$save_libs
AC_SUBST(IB_LIBS)

dnl IB_CPPFLAGS="$IB_CPPFLAGS -I/usr/mellanox/include -I/usr/mellanox/wrap"
dnl AC_SUBST(IB_CPPFLAGS)

dnl IB_LDFLAGS="$IB_LDFLAGS -L/usr/mellanox/lib"
IB_LDFLAGS="$IB_LDFLAGS -L/usr/sf-iba/iba/linuxuser/bin/x86/2.4.18-19.7.x/lib/free"
AC_SUBST(IB_LDFLAGS)

AC_SUBST(device_name)
AC_SUBST(channel_name)

AC_SUBST(AR)
AC_SUBST(RANLIB)
AC_SUBST(MPILIBNAME)
AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CC_SHL)
AC_SUBST(C_LINK_SHL)
AC_SUBST(ENABLE_SHLIB)
AC_SUBST(master_top_srcdir)
dnl
dnl Dependency handling
AC_SUBST(MAKE_DEPEND_C)

AC_OUTPUT(Makefile src/Makefile localdefs)
