AC_INIT(configure.in)

dnl
dnl Set the directory that contains support scripts such as install-sh and
dnl config.guess
dnl
AC_CONFIG_AUX_DIR(../../../../../confdb)

dnl
dnl Definitions will be placed in this file rather than in the DEFS variable
dnl
AC_CONFIG_HEADER(include/mpidi_ch3i_shm_conf.h)

echo "RUNNING CONFIGURE FOR THE SHARED MEMORY CHANNEL"

dnl
dnl First check that we have a clean build if we are doing a VPATH build
if test "`cd $srcdir && pwd`" != "`pwd`" && test -f $srcdir/config.status ; then
    AC_MSG_ERROR([You cannot do a VPATH build if the source directory has been
    configured.  Run "make distclean" in $srcdir first.])
fi

PAC_PROG_MAKE

AC_DEFINE(USE_PROCESS_LOCKS,,[Define to use process locks])

AC_CHECK_FUNCS( yield sched_yield usleep sleep select )
AC_CHECK_FUNCS( mutex_init compare_and_swap )
AC_CHEKC_FUNCS( pthread_mutexattr_init pthread_mutexattr_setpshared )

AC_CHECK_HEADERS(				\
    assert.h					\
    errno.h					\
    fcntl.h					\
    stdlib.h					\
    sys/param.h					\
    sys/types.h					\
    unistd.h    \
    pthread.h   \
)

AC_SUBST(DEVICE)
AC_SUBST(CHANNEL)

AC_SUBST(AR)
AC_SUBST(RANLIB)
AC_SUBST(MPILIBNAME)
AC_SUBST(CC)
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(CC_SHL)
AC_SUBST(C_LINK_SHL)
AC_SUBST(master_top_srcdir)

AC_OUTPUT(Makefile src/Makefile localdefs)
